src/test/deca/syntax/valid/resultats/test20_ifelse-lex.res
'{': [@0,294:294='{',<36>,17:0]
'if': [@1,297:298='if',<11>,18:1]
'(': [@2,299:299='(',<34>,18:3]
INT: [@3,300:300='2',<1>,18:4]
'==': [@4,301:302='==',<40>,18:5]
INT: [@5,303:303='2',<1>,18:7]
')': [@6,304:304=')',<35>,18:8]
'{': [@7,305:305='{',<36>,18:9]
'println': [@8,309:315='println',<18>,19:2]
'(': [@9,316:316='(',<34>,19:9]
STRING: [@10,317:325='"Hello 2"',<47>,19:10]
')': [@11,326:326=')',<35>,19:19]
';': [@12,327:327=';',<39>,19:20]
'}': [@13,330:330='}',<37>,20:1]
'if': [@14,335:336='if',<11>,22:1]
'(': [@15,337:337='(',<34>,22:3]
INT: [@16,338:338='2',<1>,22:4]
'>': [@17,339:339='>',<28>,22:5]
INT: [@18,340:340='3',<1>,22:6]
')': [@19,341:341=')',<35>,22:7]
'{': [@20,342:342='{',<36>,22:8]
'println': [@21,346:352='println',<18>,23:2]
'(': [@22,353:353='(',<34>,23:9]
STRING: [@23,354:361='"FAUX 1"',<47>,23:10]
')': [@24,362:362=')',<35>,23:18]
';': [@25,363:363=';',<39>,23:19]
'}': [@26,366:366='}',<37>,24:1]
'else': [@27,368:371='else',<9>,24:3]
'if': [@28,373:374='if',<11>,24:8]
'(': [@29,375:375='(',<34>,24:10]
INT: [@30,376:376='1',<1>,24:11]
'==': [@31,377:378='==',<40>,24:12]
INT: [@32,379:379='1',<1>,24:14]
')': [@33,380:380=')',<35>,24:15]
'{': [@34,383:383='{',<36>,25:1]
'println': [@35,384:390='println',<18>,25:2]
'(': [@36,391:391='(',<34>,25:9]
STRING: [@37,392:400='"Hello 3"',<47>,25:10]
')': [@38,401:401=')',<35>,25:19]
';': [@39,402:402=';',<39>,25:20]
'}': [@40,403:403='}',<37>,25:21]
'if': [@41,408:409='if',<11>,27:1]
'(': [@42,410:410='(',<34>,27:3]
INT: [@43,411:411='2',<1>,27:4]
'>': [@44,412:412='>',<28>,27:5]
INT: [@45,413:413='3',<1>,27:6]
')': [@46,414:414=')',<35>,27:7]
'{': [@47,417:417='{',<36>,28:1]
'println': [@48,418:424='println',<18>,28:2]
'(': [@49,425:425='(',<34>,28:9]
STRING: [@50,426:433='"FAUX 2"',<47>,28:10]
')': [@51,434:434=')',<35>,28:18]
';': [@52,435:435=';',<39>,28:19]
'}': [@53,436:436='}',<37>,28:20]
'else': [@54,439:442='else',<9>,29:1]
'{': [@55,445:445='{',<36>,30:1]
'println': [@56,446:452='println',<18>,30:2]
'(': [@57,453:453='(',<34>,30:9]
STRING: [@58,454:462='"Hello 4"',<47>,30:10]
')': [@59,463:463=')',<35>,30:19]
';': [@60,464:464=';',<39>,30:20]
'}': [@61,465:465='}',<37>,30:21]
'}': [@62,467:467='}',<37>,31:0]
