src/test/deca/syntax/invalid/resultats/test22_while-lex.res
'{': [@0,287:287='{',<36>,14:0]
IDENT: [@1,290:292='int',<26>,15:1]
IDENT: [@2,294:294='i',<26>,15:5]
'=': [@3,295:295='=',<29>,15:6]
INT: [@4,296:296='0',<1>,15:7]
';': [@5,297:297=';',<39>,15:8]
'while': [@6,300:304='while',<25>,16:1]
'(': [@7,305:305='(',<34>,16:6]
IDENT: [@8,306:306='i',<26>,16:7]
'<': [@9,307:307='<',<27>,16:8]
INT: [@10,308:308='1',<1>,16:9]
')': [@11,309:309=')',<35>,16:10]
IDENT: [@12,313:313='i',<26>,17:2]
'=': [@13,315:315='=',<29>,17:4]
INT: [@14,317:317='2',<1>,17:6]
';': [@15,318:318=';',<39>,17:7]
'println': [@16,323:329='println',<18>,19:1]
'(': [@17,330:330='(',<34>,19:8]
STRING: [@18,331:337='"Hello"',<47>,19:9]
')': [@19,338:338=')',<35>,19:16]
';': [@20,339:339=';',<39>,19:17]
'}': [@21,341:341='}',<37>,20:0]
